docs/src/components/Subtitle/Subtitle.css
@layer components {
  .Subtitle {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-size: var(--font-size-18);
    line-height: 1.75rem;
    text-wrap: pretty;
    color: var(--gray-t1);
    margin-bottom: 1.5rem;
    gap: var(--space-12);
  }
}

